# Metron

./: AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  codeql.yml  secrets-scan.yml
docs/worklogs/: worklog.md
src/adapters/: prometheus.rs
src/application/: exporter.rs
src/domain/: counter.rs  gauge.rs  histogram.rs  registry.rs
